* src/character.c (char_width): Support glyphs with faces.  (Bug#32276)